style: fix width overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,19 +15,6 @@
   color: black !important;
 }
 
-/* .printable {
-  display: none;
-}
-
-@media print {
-  body *:not(.printable, .printable *) {
-    display: none;
-  }
-  .printable {
-    display: flex !important;
-  }
-} */
-
 @page {
   size: auto;
   margin: 80px 64px 48px 64px;
@@ -38,7 +25,7 @@
     @apply relative underline inline-flex justify-center underline-offset-2 decoration-dotted decoration-primary !mb-0;
   }
   .ttip {
-    @apply absolute opacity-0 pointer-events-none transition-opacity -top-7 whitespace-nowrap h-max bg-base-200 w-max px-4 py-1 flex flex-col font-semibold text-sm;
+    @apply absolute opacity-0 pointer-events-none transition-opacity -top-7 whitespace-nowrap h-max bg-base-200 w-max px-2 py-1 flex flex-col font-semibold text-sm;
   }
   .highlight:hover .ttip {
     @apply opacity-100;
